# django-backend-youtube

./: .dockerignore  .env  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/app/: route.py  settings.py  urls.py
app/chat/: admin.py  consumers.py  consuners.py  models.py  routes.py  serializers.py  tests.py  urls.py  views.py
app/chat/templates/: chat.html
app/chat/templates/chat/: index.html
app/comments/: models.py
app/comments/migrations/: 0002_alter_comment_video.py  0003_alter_comment_video.py
app/common/: models.py
app/reactions/: models.py
app/subscriptions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/users/: models.py  tests.py
app/users/migrations/: 0001_initial.py
app/videos/: models.py  serializers.py  tests.py  urls.py  views.py
app/videos/migrations/: 0001_initial.py
data/db/: postmaster.pid
data/db/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841  pg_internal.init
data/db/base/16384/: 1247  1249  1259  1259_fsm  16390  16391  16395  16396  16398  16399  16402  16404  16406  16407  16410  16412  16416  16418  16420  16424  16426  16433  16434  16447  16452  16453  16457  16458  16460  16462  16466  16468  16469  16472  16474  16475  16488  16489  16501  16502  (+74 more)
data/db/base/5/: pg_internal.init
data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
data/db/pg_subtrans/: 0000
data/db/pg_xact/: 0000
proxy/: Dockerfile
