[tool.poetry]
name = "django-youtube"
version = "0.1.0"
description = ""
authors = ["BE-02-KMJ <mjk5912@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
channels = "^4.0.0"
drf-spectacular = "^0.27.2"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
